puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Reports.Shell/content/Views/Reports/Index.cshtml.pp
@{
    ViewBag.Title = "Reports";
    Layout = "~/Views/Shared/_Folder.cshtml";
    ViewBag.SitemapProvider = "Reports";
}

<h2>Reports</h2>
